[package]
name = "llstrata"
version = "0.0.1"
authors = ["Joshua Cranmer <Pidgeot18@gmail.com>"]
publish = false
build = "build.rs"

[dependencies]
llvmmc = { version = "0.1.0", path = "llvm-mc" }
asm-executor = { version = "0.1.0", path = "asm-executor" }
getopts = "0.2.14"
serde_json = "0.9.10"
tempdir = "0.3.5"
llvm-alt = { git = "https://github.com/jcranmer/llvm-rs" }
llvm-sys = "0.4.0"

[build-dependencies]
gcc = "0.3"

[workspace]
